--- a/homework.ipynb
+++ b/homework.ipynb
@@ -152,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 88,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -161,13 +161,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 89,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p2 = sum(q2.values())/(len(q2))"
+        "p2 = sum(r * p for r, p in q2.items())"
       ]
     },
     {
@@ -179,16 +179,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 90,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "0.2"
+              "3.0799999999999996"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 90,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -660,7 +660,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 93,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -699,13 +699,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
-        "mean_q8 = np.mean(q8)\n",
-        "p8 = math.sqrt(np.mean((q8-mean_q8)**2))"
+        "p8 = np.std(q8)"
       ]
     },
     {
@@ -717,16 +716,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 97,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "3.1633887246797245"
+              "np.float64(3.1793252926677353)"
             ]
           },
-          "execution_count": 25,
+          "execution_count": 97,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1235,12 +1234,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 101,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
-        "a_b_added=q14a+q14b\n",
+        "a=np.array(q14a)\n",
+        "b=np.array(q14b)\n",
+        "a_b_added=a+b\n",
         "p14 = np.mean(a_b_added)"
       ]
     },
@@ -1253,16 +1254,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 102,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "np.float64(1.3305619129)"
+              "np.float64(2.6611238258)"
             ]
           },
-          "execution_count": 48,
+          "execution_count": 102,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1282,7 +1283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 103,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1292,7 +1293,7 @@
         "    if random.random() < 0.01:\n",
         "        return \"You win!\"\n",
         "    else:\n",
-        "        return \"Sorry!\""
+        "        return \"Sorry\""
       ]
     },
     {
@@ -1304,25 +1305,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 104,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "['Sorry!',\n",
-              " 'Sorry!',\n",
-              " 'Sorry!',\n",
-              " 'Sorry!',\n",
-              " 'Sorry!',\n",
-              " 'Sorry!',\n",
-              " 'Sorry!',\n",
-              " 'Sorry!',\n",
-              " 'Sorry!',\n",
-              " 'Sorry!']"
+              "['Sorry',\n",
+              " 'Sorry',\n",
+              " 'Sorry',\n",
+              " 'Sorry',\n",
+              " 'Sorry',\n",
+              " 'Sorry',\n",
+              " 'Sorry',\n",
+              " 'Sorry',\n",
+              " 'Sorry',\n",
+              " 'Sorry']"
             ]
           },
-          "execution_count": 50,
+          "execution_count": 104,
           "metadata": {},
           "output_type": "execute_result"
         }
