--- a/homework.ipynb
+++ b/homework.ipynb
@@ -699,12 +699,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 106,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
-        "p8 = np.std(q8)"
+        "q8_array = np.array(q8)\n",
+        "n=len(q8_array)\n",
+        "q8_mean=np.mean(q8_array)\n",
+        "p8 = np.sqrt(np.sum(q8_array-q8_mean)**2/(n-1))"
       ]
     },
     {
@@ -716,16 +719,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 107,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "np.float64(3.1793252926677353)"
+              "np.float64(3.570611593983174e-15)"
             ]
           },
-          "execution_count": 97,
+          "execution_count": 107,
           "metadata": {},
           "output_type": "execute_result"
         }
