--- a/homework.ipynb
+++ b/homework.ipynb
@@ -699,7 +699,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": 108,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -707,7 +707,7 @@
         "q8_array = np.array(q8)\n",
         "n=len(q8_array)\n",
         "q8_mean=np.mean(q8_array)\n",
-        "p8 = np.sqrt(np.sum(q8_array-q8_mean)**2/(n-1))"
+        "p8 = np.sqrt(np.sum((q8_array-q8_mean)**2)/(n-1))"
       ]
     },
     {
@@ -719,16 +719,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": 109,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "np.float64(3.570611593983174e-15)"
+              "np.float64(3.1793252926677353)"
             ]
           },
-          "execution_count": 107,
+          "execution_count": 109,
           "metadata": {},
           "output_type": "execute_result"
         }
